solution day 1 part 2